# RingOA-Template

./: .gitignore  CMakeLists.txt  README.md  build.py
example/: 2PC.md  3PC.md  CMakeLists.txt  dpf_pir.cpp  dpf_pir.h  main.cpp  oa.cpp  oa.h
pdte/: CMakeLists.txt  build_tree_db.py  main.cpp  pdte.cpp  pdte.h  pdte_bench.cpp  pdte_bench.h
